Fixed layout bugs.

--- a/Project/IOT/IOT/CDN/Themes/1/css/style.css
+++ b/Project/IOT/IOT/CDN/Themes/1/css/style.css
@@ -19,13 +19,14 @@ table{border-collapse:collapse; border-spacing:0}
 
 /* Typography */
 body.zh-cn, body.zh-tw {font-family: Microsoft YaHei, "Microsoft JhengHei", 华文细黑, STHeiti, MingLiu; font-size:82%; }
-body { font-size: 69%; font-family: 'Open Sans', Arial, sans-serif; }
+body { font-size: 69%; font-family: 'Open Sans', Arial, sans-serif; min-width: 1000px; }
 
 body.home { background: url(../images/banner.jpg) no-repeat top center; }
 body { background: url(../images/bg-header.jpg) no-repeat top center; }
 
-.page-wrapper-inner { min-height: 600px; max-width: 1920px; }
-.header { height: 150px; position: relative; }
+.page-wrapper { width: 100%; height: 100%; min-width: 1000px; }
+.page-wrapper-inner { min-height: 600px; width: 100%; }
+.header { height: 150px; position: relative; width: 100%; }
 .header-inner { width: 960px; margin: 0 auto; position: relative;}
 .main-menu-c { height: 45px; position: absolute; z-index:200; bottom: 0; width: 100%; background: url(../images/bg-sprite.png) repeat 0 0; }
 .main-menu, .menu-item-c { display: inline; }
@@ -59,7 +60,7 @@ body.application .application .menu-item, body.careers .careers .menu-item, body
 .lang-menu-item.selected { color: #fff; }
 
 .body-content-wrapper { width: 960px; margin: 0 auto; min-height: 600px; }
-.banner-c { width: 960px; height: 450px;  }
+.banner-c { width: 950px; height: 450px;  }
 .body-content { margin-top: 60px; }
 
 .news-c { float: left; width: 50%; margin-right: 4.5%; }
@@ -86,7 +87,7 @@ body.application .application .menu-item, body.careers .careers .menu-item, body
 .news-row:hover { background: #e9e9e9; color: #4c8302; }
 .news-row:hover .news-right-arrow { border-left-color: #4c8302; }
 
-.footer { margin-top: 30px; display: block; height: 60px; background: #89b351; border-top: 3px solid #7ca93f; }
+.footer { margin-top: 30px; display: block; height: 60px; background: #89b351; border-top: 3px solid #7ca93f; width: 100%; }
 .footer-inner { width: 960px; margin: 0 auto; padding: 10px 0; line-height: 20px; }
 .footer-add { float: left; }
 .footer-copyright { float: right; text-align: right; }
@@ -136,7 +137,7 @@ body.application .application .menu-item, body.careers .careers .menu-item, body
 
 .content-sgle-col { font-size:1.2em; }
 
-.cs-buttons { margin-top: -30px !important; }
+.cs-buttons { margin-top: -30px !important; width: 100px; margin: 0 auto; }
 .cs-button-coin-slider { margin: 0 5px; width: 8px; height: 8px; text-indent: -30000px; display: inline-block; border-radius: 8px; background: #fff; }
 .cs-active { background: #92ffac; }
 
@@ -151,3 +152,4 @@ body.application .application .menu-item, body.careers .careers .menu-item, body
 .error-page .maintenance-icon {background: url(../images/sprite.png) no-repeat -377px -99px;}
 
 .slideshow{ background: none !important; }
+.script-container { display: none; width: 0 !important; height: 0 !important; }
